--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/srgykim/vk_api_parser#readme",
   "dependencies": {
     "@google-cloud/bigquery": "^5.6.0",
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "easyvk": "^2.8.2"
   }
 }
